# private-pypi-template

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: linter_and_test.yml  release.yml
docs/: index.md  main_function.md  my_library.md  overview.md
my_library/: __init__.py  base.py  example.env  first_exp.py  second_exp.py
scripts/: build.sh  lint.py
tests/: conftest.py  test_base.py
